# qbittorrent-add-trackers

./: .gitignore  Dockerfile  README.md  config.base.yaml  pyproject.toml
.devcontainer/: .env  Dockerfile  compose.yml  devcontainer.json  post-create.sh  run_on_add.sh
build_scripts/: build_docker.py  package.py
qbittorrent_add_trackers/: main.py
qbittorrent_add_trackers/component/: add_trackers_services.py  di_module.py  qbittorrent_manager.py  trackers_fetcher.py
qbittorrent_add_trackers/config/: config.py
qbittorrent_add_trackers/controller/: di_module.py
src/qbittorrent_add_trackers/: flask_runner.py  main.py
src/qbittorrent_add_trackers/config/: di_module.py
src/qbittorrent_add_trackers/controller/: restapi_view.py
tests/component/: add_trackers_services_test.py  qbittorrent_manager_test.py  trackers_fetcher_test.py
