[project]
name = "qbittorrent-add-trackers"
version = "0.1.3"
description = ""
authors = [
    {name = "CXwudi", email = "cx2010017@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
    "qbittorrent-api>=2026.5.3",
    "logging>=0.4.9.6",
    "websocket-client>=1.8.0",
    "injector>=0.22.0",
    "python-configuration[yaml,toml]>=0.12.1",
    "cachetools>=6.0.0",
    "flask>=3.1.1",
    "flask-injector>=0.15.0",
    "waitress>=3.0.2",
    "pyinstaller>=6.14.0",
    "tomli>=2.1.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
]

[project.scripts]
main = "qbittorrent_add_trackers.main:main"
docker-build = "build_scripts.build_docker:main"
package = "build_scripts.package:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qbittorrent_add_trackers", "build_scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
